--- a/templates/hbase-master.yaml
+++ b/templates/hbase-master.yaml
@@ -43,14 +43,11 @@ spec:
     spec:
       containers:
       - name: hbase-master
-        image: oisp/hbase
+        image: oisp/hbase:{{ .Values.tag }}
         resources:
           limits:
-            memory: 1G
-            cpu: 1000m
-          requests:
-            memory: 1G
-            cpu: 1000m
+            memory: 200M
+            cpu: 100m
         env:
         - name: REGIONSERVERS
           value: hbase-region
