--- a/templates/hdfs-datanode.yaml
+++ b/templates/hdfs-datanode.yaml
@@ -32,11 +32,8 @@ spec:
         args: ["start-hadoop", "datanode", "hdfs-namenode"]
         resources:
           limits:
-            memory: 1G
-            cpu: 500m
-          requests:
-            memory: 1G
-            cpu: 500m
+            memory: 200M
+            cpu: 100m
         env:
           - name: HDFS_USER
             value: root
