--- a/templates/kafka.yaml
+++ b/templates/kafka.yaml
@@ -33,20 +33,22 @@ spec:
       hostname: kafka
       containers:
       - name: kafka
-        image: wurstmeister/kafka
+        image: bitnami/kafka:1.1.1
         resources:
           requests:
-            memory: 1G
-            cpu: 1
         env:
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: zookeeper:2181
-        - name: KAFKA_ADVERTISED_HOST_NAME
-          value: "kafka"
-        - name: KAFKA_ADVERTISED_PORT
-          value: "9092"
-        - name: KAFKA_PORT
-          value: "9092"
+        - name: ALLOW_PLAINTEXT_LISTENERS
+          value: "yes"
+        - name: KAFKA_LISTENERS
+          value: "LISTENER_BOB://0.0.0.0:9092,LISTENER_FRED://0.0.0.0:9093"
+        - name: KAFKA_ADVERTISED_LISTENERS
+          value: "LISTENER_BOB://kafka:9092,LISTENER_FRED://localhost:9093"
+        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+          value: "LISTENER_BOB:PLAINTEXT,LISTENER_FRED:PLAINTEXT"
+        - name: KAFKA_INTER_BROKER_LISTENER_NAME
+          value: "LISTENER_BOB"
         ports:
         - containerPort: 9092
         readinessProbe:
